--- a/Shared/Components/Sidebar/SidebarEntity.razor
+++ b/Shared/Components/Sidebar/SidebarEntity.razor
@@ -3,7 +3,7 @@
 <div class="@(IsSelected ? "bg-forkBlue-hover text-label-hover" : "text-label hover:text-label-hover") w-full flex items-center py-3 pl-5 cursor-pointer" @onclick="OnSelectEntity">
     @* Status *@
     @* TODO CKE actual status *@
-    <StatusIndicator Status="EntityStatus.STARTED"></StatusIndicator>
+    <StatusIndicator Status="EntityStatus.Started"></StatusIndicator>
     @* Icon *@
     <span class="icon px-3 text-2xl">1</span>
     @* Content *@
