--- a/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleTab.razor
+++ b/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleTab.razor
@@ -11,17 +11,25 @@
         <ConsoleIn></ConsoleIn>
 
         @* IP and Restart Counter *@
-        <div>IP</div>
+        <div class="ip-container clipping h-12 max-w-max">
+            <div class="flex h-full">
+                <span class="text-xs text-label py-1">IP Address</span>
+                <span class="mx-8 self-center text-text monospace">192.168.999.1:25565</span>
+            </div>
+        </div>
     </div>
 
     @* Hardware Stats *@
-    <div class="flex flex-col gap-4">
+    <div class="flex flex-col gap-4 overflow-auto scroll-hidden">
         <PerformanceMonitor Content="30" SubTitle="%" Name="CPU" Color="Green"></PerformanceMonitor>
-        <div>
+        <div class="performance-container">
             <PerformanceMonitor Content="2" SubTitle="%" Name="RAM" Color="Green"></PerformanceMonitor>
-            <span>2048 MB ...</span>
+            <div class="flex text-forkBlue-highlighted text-xs cursor-pointer">
+                <span>2048 MB</span>
+                <span class="leading-none ml-1">...</span>
+            </div>
         </div>
-        <PerformanceMonitor Content="59:59" SubTitle="H:M" Name="UP\nTIME" Color="Green"></PerformanceMonitor>
+        <PerformanceMonitor Content="59:59" SubTitle="H:M" Name="UP<br>TIME" Color="Green"></PerformanceMonitor>
     </div>
 </div>
 
