--- a/Shared/Components/Entity/Tabs/ConsoleTab/PerformanceMonitor.razor
+++ b/Shared/Components/Entity/Tabs/ConsoleTab/PerformanceMonitor.razor
@@ -1,9 +1,13 @@
-﻿<div class="performance-background clipping flex p-4 justify-center">
-    <div class="clipping performance-circle justify-center items-center flex flex-col overflow-visible w-16 h-16">
-        <span class="text-status-green font-bold text-3xl leading-none">@Content</span>
-        <span class="text-status-green font-bold leading-none">@SubTitle</span>
+﻿<div class="performance-container">
+    <div class="performance-background clipping flex p-4 justify-center">
+        <div class="clipping performance-circle justify-center items-center flex flex-col overflow-visible w-20 h-20">
+            <span class="text-status-green font-bold text-3xl leading-none">@Content</span>
+            <span class="text-status-green font-bold leading-none absolute bottom-2.5">@SubTitle</span>
+        </div>
+        <span class="text-xs text-right text-label font-bold absolute bottom-0 right-0 leading-tight">@((MarkupString)Name)</span>
     </div>
 </div>
+
 
 @code {
 
