--- a/Shared/MainLayout.razor
+++ b/Shared/MainLayout.razor
@@ -1,6 +1,6 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="w-screen h-screen bg-forkBlue-dark flex flex-col select-none">
+<div class="w-screen h-screen bg-forkBlue-dark flex flex-col select-none overflow-auto" style="min-width: 1080px; min-height: 720px;">
     <Navbar/>
 
     @Body
