--- a/_Imports.razor
+++ b/_Imports.razor
@@ -13,6 +13,7 @@
 @using ProjectAveryFrontend.Shared.Components.Entity
 @using ProjectAveryFrontend.Shared.Components.Entity.Tabs
 @using ProjectAveryFrontend.Shared.Components.Entity.Tabs.ConsoleTab
+@using ProjectAveryFrontend.Shared.Components.Entity.Tabs.Playerlist
 @using ProjectAveryFrontend.Shared.Components.Shared
 @using ProjectAveryFrontend.Shared.Components.Buttons
 @using ProjectAveryFrontend.Shared.Components.Sidebar
