--- a/Shared/Components/Sidebar/SidebarEntity.razor
+++ b/Shared/Components/Sidebar/SidebarEntity.razor
@@ -13,7 +13,10 @@
     @* Content *@
     <div class="flex-1">
         <p class="text-md">@Value.Name</p>
-        <p class="text-sm">0/100</p>
+        @if (Value is Server server)
+        {
+            <p class="text-sm">@(server.ServerPlayers?.Count(p => p.IsOnline) ?? 0) / @(server.VanillaSettings?.MaxPlayers ?? 0)</p>
+        }
     </div>
     @* Selected Indicator *@
     <SelectedIndicatorVertical IsVisible="IsSelected" ParentHeight="72" NegativeYMargins="3"></SelectedIndicatorVertical>
