Added Banlist and Whitelist
fixed #17

--- a/Shared/Components/Entity/Entity.razor
+++ b/Shared/Components/Entity/Entity.razor
@@ -42,8 +42,8 @@
                 <div class="mb-5">
                     <IconTabControl OnTabSelected="PlayerListTabSelected">
                         <IconTab RelatedType="typeof(Playerlist)" IconCharacter="'p'"></IconTab>
-                        <IconTab IconCharacter="'b'"></IconTab>
-                        <IconTab IconCharacter="'w'"></IconTab>
+                        <IconTab RelatedType="typeof(Banlist)" IconCharacter="'b'"></IconTab>
+                        <IconTab RelatedType="typeof(Whitelist)" IconCharacter="'w'"></IconTab>
                     </IconTabControl>
                 </div>
 
