--- a/Shared/Components/Entity/Tabs/Playerlist/Playerlist.razor
+++ b/Shared/Components/Entity/Tabs/Playerlist/Playerlist.razor
@@ -1,5 +1,8 @@
-﻿@using ProjectAveryCommon.Model.Entity.Pocos
+﻿@using ProjectAveryFrontend.Logic.Services.Notifications
+@using ProjectAveryCommon.Model.Entity.Pocos
 @using ProjectAveryCommon.Model.Entity.Pocos.Player
+@using ProjectAveryCommon.Model.Notifications.EntityNotifications.PlayerNotifications
+@inject INotificationService _notificationService
 <div class="h-full bg-forkBlue pt-3">
     @* Player count *@
     <span class="px-7 py-3 text-label-hover">@(Server?.ServerPlayers?.Count(p => p.IsOnline) ?? 0) / @(Server?.VanillaSettings?.MaxPlayers ?? 0) - Online</span>
@@ -12,7 +15,7 @@
             foreach (var player in Server.ServerPlayers)
             {
                 <CascadingValue Value="this">
-                    <PlayerComponent Value="player"></PlayerComponent>
+                    <ServerPlayerComponent Value="player"></ServerPlayerComponent>
                 </CascadingValue>
             }
         }
@@ -28,9 +31,32 @@
 
     public ServerPlayer? ActivePlayer { get; set; }
 
-    public void SelectPlayer(PlayerComponent playerComponent)
+    public void SelectPlayer(ServerPlayerComponent playerComponent)
     {
         ActivePlayer = playerComponent.Value;
+        StateHasChanged();
+    }
+
+    protected override void OnInitialized()
+    {
+        _notificationService.Register<UpdatePlayerNotification>(HandlePlayerUpdate);
+    }
+
+    private async Task HandlePlayerUpdate(UpdatePlayerNotification notification)
+    {
+        if (Server?.ServerPlayers == null)
+            return;
+
+        var existing = Server?.ServerPlayers.FirstOrDefault(p => p.Player.Uid == notification.ServerPlayer.Player.Uid);
+        if (existing != null)
+        {
+            existing.IsOnline = notification.ServerPlayer.IsOnline;
+            existing.IsOp = notification.ServerPlayer.IsOp;
+        }
+        else
+        {
+            Server?.ServerPlayers.Add(notification.ServerPlayer);
+        }
         StateHasChanged();
     }
 
