--- a/Shared/Components/Entity/Tabs/Playerlist/ServerPlayerComponent.razor
+++ b/Shared/Components/Entity/Tabs/Playerlist/ServerPlayerComponent.razor
@@ -1,15 +1,19 @@
 ﻿@using ProjectAveryCommon.Model.Entity.Pocos.Player
 @*
-    This is basically the same as ServerPlayerComponent, but no status indicator and a different Value
+    This is basically the same as PlayerComponent, but with status indicator and a different Value
 *@
 <div class="hover:text-label-hover @(IsActive ? "bg-forkBlue-hover text-label-hover" : "text-text-dark cursor-pointer")" @onclick="OnClick">
     <div class="flex px-7 py-3">
+        @* Status Indicator *@
+        <div style="height: 8px; width: 8px;" class="self-center rounded-full @(Value is {IsOnline: true } ? "bg-status-green" : "bg-status-inactive")"></div>
+
         @* Player Head *@
         <div class="mx-2"></div>
 
         @* Player name *@
         <div>
-            <div class="text-lg">@Value?.Name</div>
+            <div class="text-lg">@Value?.Player.Name</div>
+            <div class="text-xs">@(Value is {IsOp: true} ? "operator" : "member")</div>
         </div>
     </div>
 </div>
@@ -17,10 +21,10 @@
 @code {
 
     [CascadingParameter]
-    public ISimplePlayerlist? Parent { get; set; }
+    public Playerlist? Parent { get; set; }
 
     [Parameter]
-    public Player? Value { get; set; }
+    public ServerPlayer? Value { get; set; }
 
     private bool IsActive => Parent?.ActivePlayer != null && Parent.ActivePlayer.Equals(Value);
 
