--- a/Shared/Components/Entity/Tabs/Playerlist/Whitelist.razor
+++ b/Shared/Components/Entity/Tabs/Playerlist/Whitelist.razor
@@ -45,7 +45,7 @@
 
     private async Task HandlePlayerUpdate(UpdateWhitelistPlayerNotification notification)
     {
-        if (Server == null)
+        if (Server == null || notification.EntityId != Server.Id)
             return;
         Server.Whitelist ??= new List<Player>();
 
