Full project rename

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@using ProjectAveryFrontend.Logic.Services.Managers
+@using ForkFrontend.Logic.Services.Managers
 @inject IApplicationStateManager _applicationState
 
 <div class="flex flex-1">
