--- a/Shared/Components/Entity/Entity.razor
+++ b/Shared/Components/Entity/Entity.razor
@@ -1,5 +1,5 @@
-﻿@using ProjectAveryFrontend.Logic.Services.Connections
-@using ProjectAveryCommon.Model.Entity.Pocos
+﻿@using ForkFrontend.Logic.Services.Connections
+@using ForkCommon.Model.Entity.Pocos
 @inject ILogger<Entity> _logger
 @inject IEntityConnectionService _entityConnection
 
