--- a/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleOut.razor
+++ b/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleOut.razor
@@ -1,9 +1,9 @@
-﻿@using ProjectAveryFrontend.Logic.Services.Notifications
-@using ProjectAveryFrontend.Logic.Services.Connections
-@using ProjectAveryCommon.Model.Entity.Pocos
-@using ProjectAveryCommon.Model.Entity.Transient.Console
-@using ProjectAveryCommon.Model.Notifications.EntityNotifications
-@using ProjectAveryCommon.Model.Entity.Enums.Console
+﻿@using ForkFrontend.Logic.Services.Notifications
+@using ForkFrontend.Logic.Services.Connections
+@using ForkCommon.Model.Entity.Pocos
+@using ForkCommon.Model.Entity.Transient.Console
+@using ForkCommon.Model.Notifications.EntityNotifications
+@using ForkCommon.Model.Entity.Enums.Console
 @implements IAsyncDisposable
 
 @inject IJSRuntime _js
