--- a/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleTab.razor
+++ b/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleTab.razor
@@ -1,4 +1,4 @@
-﻿@using ProjectAveryCommon.Model.Entity.Pocos
+﻿@using ForkCommon.Model.Entity.Pocos
 @inherits EntityTab
 
 <div class="flex-1 flex bg-forkBlue gap-4 p-4 overflow-hidden">
