--- a/Shared/Components/Entity/Tabs/Playerlist/PlayerComponent.razor
+++ b/Shared/Components/Entity/Tabs/Playerlist/PlayerComponent.razor
@@ -1,4 +1,4 @@
-﻿@using ProjectAveryCommon.Model.Entity.Pocos.Player
+﻿@using ForkCommon.Model.Entity.Pocos.Player
 @*
     This is basically the same as ServerPlayerComponent, but no status indicator and a different Value
 *@
