--- a/Shared/Components/Entity/Tabs/Playerlist/Playerlist.razor
+++ b/Shared/Components/Entity/Tabs/Playerlist/Playerlist.razor
@@ -1,7 +1,7 @@
-﻿@using ProjectAveryFrontend.Logic.Services.Notifications
-@using ProjectAveryCommon.Model.Entity.Pocos
-@using ProjectAveryCommon.Model.Entity.Pocos.Player
-@using ProjectAveryCommon.Model.Notifications.EntityNotifications.PlayerNotifications
+﻿@using ForkFrontend.Logic.Services.Notifications
+@using ForkCommon.Model.Entity.Pocos
+@using ForkCommon.Model.Entity.Pocos.Player
+@using ForkCommon.Model.Notifications.EntityNotifications.PlayerNotifications
 @inject INotificationService _notificationService
 <div class="h-full bg-forkBlue pt-3">
     @* Player count *@
