--- a/Shared/Components/Navbar.razor
+++ b/Shared/Components/Navbar.razor
@@ -1,4 +1,4 @@
-﻿@using ProjectAveryFrontend.Logic.Services.Translation
+﻿@using ForkFrontend.Logic.Services.Translation
 @inject ITranslationService _translation
 
 <div class="navbar w-full bg-forkBlue-light">
