--- a/Shared/Components/Sidebar/Sidebar.razor
+++ b/Shared/Components/Sidebar/Sidebar.razor
@@ -1,7 +1,7 @@
-﻿@using ProjectAveryFrontend.Logic.Services.Connections
-@using ProjectAveryCommon.Model.Entity.Pocos
-@using ProjectAveryCommon.Model.Entity.Pocos.ServerSettings
-@using ProjectAveryCommon.Model.Payloads.Entity
+﻿@using ForkFrontend.Logic.Services.Connections
+@using ForkCommon.Model.Entity.Pocos
+@using ForkCommon.Model.Entity.Pocos.ServerSettings
+@using ForkCommon.Model.Payloads.Entity
 @inject ILogger<Sidebar> _logger
 @inject IEntityConnectionService _entityConnection
 
