--- a/Shared/Components/Sidebar/SidebarEntity.razor
+++ b/Shared/Components/Sidebar/SidebarEntity.razor
@@ -1,6 +1,6 @@
-﻿@using ProjectAveryFrontend.Logic.Services.Notifications
-@using ProjectAveryCommon.Model.Entity.Pocos
-@using ProjectAveryCommon.Model.Notifications.EntityNotifications
+﻿@using ForkFrontend.Logic.Services.Notifications
+@using ForkCommon.Model.Entity.Pocos
+@using ForkCommon.Model.Notifications.EntityNotifications
 @inject ILogger<SidebarEntity> _logger
 @inject INotificationService _notificationService
 
