--- a/Shared/Components/Sidebar/StatusIndicator.razor
+++ b/Shared/Components/Sidebar/StatusIndicator.razor
@@ -1,4 +1,4 @@
-﻿@using ProjectAveryCommon.Model.Entity.Enums
+﻿@using ForkCommon.Model.Entity.Enums
 <div style="height: 12px; width: 12px;" class="rounded-full @($"bg-{Color}")"></div>
 
 @code {
