--- a/Shared/Components/Translated.razor
+++ b/Shared/Components/Translated.razor
@@ -1,4 +1,4 @@
-﻿@using ProjectAveryFrontend.Logic.Services.Translation
+﻿@using ForkFrontend.Logic.Services.Translation
 @inject ITranslationService _translation
 
 <span>@value</span>
