--- a/_Imports.razor
+++ b/_Imports.razor
@@ -6,14 +6,14 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using ProjectAveryFrontend
-@using ProjectAveryFrontend.Shared
-@using ProjectAveryFrontend.Shared.Components
-@using ProjectAveryFrontend.Shared.Components.Inputs
-@using ProjectAveryFrontend.Shared.Components.Entity
-@using ProjectAveryFrontend.Shared.Components.Entity.Tabs
-@using ProjectAveryFrontend.Shared.Components.Entity.Tabs.ConsoleTab
-@using ProjectAveryFrontend.Shared.Components.Entity.Tabs.Playerlist
-@using ProjectAveryFrontend.Shared.Components.Shared
-@using ProjectAveryFrontend.Shared.Components.Buttons
-@using ProjectAveryFrontend.Shared.Components.Sidebar
+@using ForkFrontend
+@using ForkFrontend.Shared
+@using ForkFrontend.Shared.Components
+@using ForkFrontend.Shared.Components.Inputs
+@using ForkFrontend.Shared.Components.Entity
+@using ForkFrontend.Shared.Components.Entity.Tabs
+@using ForkFrontend.Shared.Components.Entity.Tabs.ConsoleTab
+@using ForkFrontend.Shared.Components.Entity.Tabs.Playerlist
+@using ForkFrontend.Shared.Components.Shared
+@using ForkFrontend.Shared.Components.Buttons
+@using ForkFrontend.Shared.Components.Sidebar
