--- a/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleIn.razor
+++ b/Shared/Components/Entity/Tabs/ConsoleTab/ConsoleIn.razor
@@ -1,5 +1,5 @@
-﻿@using ProjectAveryFrontend.Logic.Services.Connections
-@using ProjectAveryCommon.Model.Entity.Pocos
+﻿@using ForkFrontend.Logic.Services.Connections
+@using ForkCommon.Model.Entity.Pocos
 @inject IEntityConnectionService _entityConnection
 
 <EditForm Model="@InputForm" OnSubmit="OnSubmit">
