--- a/Shared/Components/Entity/Tabs/Playerlist/ServerPlayerComponent.razor
+++ b/Shared/Components/Entity/Tabs/Playerlist/ServerPlayerComponent.razor
@@ -1,4 +1,4 @@
-﻿@using ProjectAveryCommon.Model.Entity.Pocos.Player
+﻿@using ForkCommon.Model.Entity.Pocos.Player
 @*
     This is basically the same as PlayerComponent, but with status indicator and a different Value
 *@
