--- a/Shared/Components/Entity/Tabs/Playerlist/Whitelist.razor
+++ b/Shared/Components/Entity/Tabs/Playerlist/Whitelist.razor
@@ -1,8 +1,8 @@
-﻿@using ProjectAveryFrontend.Logic.Services.Notifications
-@using ProjectAveryCommon.Model.Entity.Pocos
-@using ProjectAveryCommon.Model.Entity.Pocos.Player
-@using ProjectAveryCommon.Model.Notifications.EntityNotifications.PlayerNotifications
-@using ProjectAveryCommon.Model.Entity.Enums.Player
+﻿@using ForkFrontend.Logic.Services.Notifications
+@using ForkCommon.Model.Entity.Pocos
+@using ForkCommon.Model.Entity.Pocos.Player
+@using ForkCommon.Model.Notifications.EntityNotifications.PlayerNotifications
+@using ForkCommon.Model.Entity.Enums.Player
 @implements ISimplePlayerlist
 @inject INotificationService _notificationService
 <div class="h-full bg-forkBlue pt-3">
