--- a/Shared/Components/Entity/Tabs/ConsoleTab/PerformanceMonitor.razor
+++ b/Shared/Components/Entity/Tabs/ConsoleTab/PerformanceMonitor.razor
@@ -1,8 +1,8 @@
 ﻿<div class="performance-container">
     <div class="performance-background clipping flex p-4 justify-center">
-        <div class="clipping performance-circle justify-center items-center flex flex-col overflow-visible w-20 h-20">
-            <span class="text-status-green font-bold text-3xl leading-none">@Content</span>
-            <span class="text-status-green font-bold leading-none absolute bottom-2.5">@SubTitle</span>
+        <div class="clipping performance-circle justify-center items-center flex flex-col overflow-visible w-20 h-20 @($"before:bg-percentage-p{ColorIntensity}")">
+            <span class="@($"text-percentage-p{ColorIntensity}") font-bold text-3xl leading-none">@Content</span>
+            <span class="t@($"text-percentage-p{ColorIntensity}") font-bold leading-none absolute bottom-2.5">@SubTitle</span>
         </div>
         <span class="text-xs text-right text-label font-bold absolute bottom-0 right-0 leading-tight">@((MarkupString)Name)</span>
     </div>
@@ -20,7 +20,9 @@
     [Parameter]
     public string? Name { get; set; }
 
+    // This is the value of the percentage color
+    // One of: 0, 10, 20, 30, 40, 50, 60, 70, 80, 90, 100
     [Parameter]
-    public string? Color { get; set; }
+    public int? ColorIntensity { get; set; }
 
 }
